changing banner-background

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1>Welcome to my site!</h1>
             <hr class="hr-banner">
             <p class="section__subtitle">I am Thanvanth, a sassy teen with a knack for science and computers!</p>
-            <br>
+            <hr class="hr-banner">
             <p class="section__subtitle--scroll">scroll down</p>
             <p href="#whoiam" class="scroll--banner"><a href="#whoiam"><i class="fas fa-chevron-down fa-2x" style="color:black"></i></a></i></p>
          </div>
