doing some changes to the gradient colors

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <!--    End of Intro Section    -->
 
         <section class="whoiam" id="whoiam">
+            <hr class="hr-banner">
             <h1 class="section__title section__title--whoiam">Who I am...</h1>
             <div class="whoiam__content">
                 Hello! I am Thanvanth, but I'd like to call myself T! T's a clumsy teen with a good sense of humor and love for physics and computers. I am sure that some of you might know that from the above banner
@@ -72,12 +73,13 @@
                 He's an astute person who's driven to accomplish and tries to improve the morale
                  of people around him by being cordial and respectful to the members of his team.
             </div>
+            <hr class="hr-banner">
         </section>
 
         <!--    Skills    -->
 
         <section class="skills" id="skills">
-            <hr>
+            <hr class="hr-banner">
             <h1 class="section__title section__title--skills">Skills:</h1>
             <p class="skill__bar--subs"><i class="fas fa-calculator"></i> Math:</p>
             <div class="container"><div class="skill__elements math">90%</div></div>
@@ -94,7 +96,7 @@
             <p class="skill__bar--subs"><i class="far fa-laugh-wink"></i> Humor:</p>
             <div class="container"><div class="skill__elements humor">95%</div></div>
             <br>
-            <hr>
+            <hr class="hr-banner">
         </section>
 
         <!--    the footer   -->
