fixed the nav-bar issue

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <header>
             <nav class="navbar">
                 <div class="website-logo">T</div>
-                <a href="#home" class="hamburger-menu">
+                <a href="#" class="hamburger-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
