add read-more for smaller devices

--- a/index.html
+++ b/index.html
@@ -75,12 +75,14 @@
                 but I just wanted to repeat it, just in case you weren't paying attention.
                 T also has a blog named "ConfessionsofT", If you want to read it you could access it through the contacts section at the end of the page!
                 <br>
-                Well, T codes during his free-time, infact he developed this site from
+                <div id="read-more" class="read-more">Well, T codes during his free-time, infact he developed this site from
                 scratch, and he loves writing and I guess his love for writing led him to start the blog, 
                 T being flexible, tries to be imaginative and strives to get the work done using his versatile 
                 skill-set at the same time tries to understand concepts and does it with passion. 
                 He's an astute person who's driven to accomplish and tries to improve the morale
-                of people around him by being cordial and respectful to the members of his team.
+                of people around him by being cordial and respectful to the members of his team.</div>
+                <br>
+                <div class="try2hide"><a href="#read-more" class="read-more-button whoiam__content">read-more</a></div>
             </div>
             <hr class="hr-banner">
         </section>
