make read-more vanish while pressed

--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
                 T being flexible, tries to be imaginative and strives to get the work done using his versatile 
                 skill-set at the same time tries to understand concepts and does it with passion. 
                 He's an astute person who's driven to accomplish and tries to improve the morale
-                of people around him by being cordial and respectful to the members of his team.</div>
+                of people around him by being cordial and respectful to the members of his team.
                 <br>
-                <div class="try2hide"><a href="#read-more" class="read-more-button whoiam__content">read-more</a></div>
+                <div><a href="#" class="read-more-button button__content">read-less...</a></div></div>
+                <br>
+                <div class="try2hide"><a href="#read-more" class="read-more-button button__content" onclick="this.style.display='none'">read-more</a></div>
             </div>
             <hr class="hr-banner">
         </section>
