--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                 He's an astute person who's driven to accomplish and tries to improve the morale
                 of people around him by being cordial and respectful to the members of his team.
                 <br>
-                <div><a href="#" class="read-more-button button__content">read-less...</a></div></div>
+                <div><a href="#whoiam" class="read-more-button button__content" onclick="myFunction()">read-less...</a></div></div>
                 <br>
-                <div class="try2hide"><a href="#read-more" class="read-more-button button__content" onclick="this.style.display='none'">read-more</a></div>
+                <div class="try2hide"><a href="#read-more" class="read-more-button" id="button__content" onclick="this.style.display='none'">read-more</a></div>
             </div>
             <hr class="hr-banner">
         </section>
