--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
             <div class="whoiam__content">
                 Hello! I am Thanvanth, but I'd like to call myself T! T's a clumsy teen with a good sense of humor and love for physics and computers. I am sure that some of you might know that from the above banner
                 but I just wanted to repeat it, just in case you weren't paying attention.
-                T also has a blog named "ConfessionsofT", If you want to read it you could access it through the contacts section at the end of the page!
                 <br>
-                <div id="read-more" class="read-more">Well, T codes during his free-time, infact he developed this site from
+                <div id="read-more" class="read-more"> T also has a blog named "ConfessionsofT", If you want to read it you could access it through the contacts section at the end of the page! Well, T codes during his free-time, infact he developed this site from
                 scratch, and he loves writing and I guess his love for writing led him to start the blog, 
                 T being flexible, tries to be imaginative and strives to get the work done using his versatile 
                 skill-set at the same time tries to understand concepts and does it with passion. 
