--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Knewave&family=Montserrat:ital@1&display=swap" rel="stylesheet">
-       
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap" rel="stylesheet">      
         <!--    Declaring the title of the site WHOO!!!-->
         <title>My own portfolio website</title>
 
