added a new gallery-page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#whoiam">Who I am</a></li>
-                        <li><a href="#skills">Skills</a></li>
                         <li><a href="#contacts">Contact</a></li>
+                        <li><a href="gallery.html">Visit the gallery!</a></li>
                         <li><a href="http://www.confessionsoft.blogspot.com" target="_blank">Go To ThE BlOg</a></li>
                     </ul>
                 </div>
@@ -91,6 +91,17 @@
         </section>
 
         <!--    Skills    -->
+        <section class="gallery-home">
+            <hr class="hr-banner">
+            <h1 class="section__title section__title--gallery">Image-gallery <i class="fas fa-camera-retro"></i></h1>
+            <p class="section__subtitle--gallery">T loves photography, check out some of the photographs that he's taken!</p>
+            <div class=home--gallery>
+                <img src="/img/4.jpeg">
+                <img src="/img/5.jpeg">
+            </div>
+            <p class="section__subtitle--gallery section__subtitle--gallery--link"><a href="/gallery.html">go to the gallery page!</a></p>
+            <hr class="hr-banner">
+        </section>
 
         <section class="skills" id="skills">
             <hr class="hr-banner">
