compressed the images

--- a/gallery.html
+++ b/gallery.html
@@ -42,14 +42,14 @@
 
         <section class="gallery">
             <div>
-                <img src="img/1.jpeg">
-                <img src="img/2.jpeg">
-                <img src="img/3.jpeg">
-                <img src="img/4.jpeg">
-                <img src="img/5.jpeg">
-                <img src="img/8.jpeg">
-                <img src="img/9.jpeg">
-                <img src="img/6.jpeg">
+                <img src="img/1.jpg">
+                <img src="img/2.jpg">
+                <img src="img/3.jpg">
+                <img src="img/4.jpg">
+                <img src="img/5.jpg">
+                <img src="img/8.jpg">
+                <img src="img/9.jpg">
+                <img src="img/6.jpg">
                 <img src="img/10.jpg">
             </div>
         </section>
