--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <h1 class="section__title section__title--gallery">Image-gallery <i class="fas fa-camera-retro"></i></h1>
             <p class="section__subtitle--gallery">T loves photography, check out some of the photographs that he's taken!</p>
             <div class=home--gallery>
-                <img src="/img/4.jpeg">
-                <img src="/img/5.jpeg">
+                <img src="/img/4.jpg">
+                <img src="/img/5.jpg">
             </div>
             <p class="section__subtitle--gallery section__subtitle--gallery--link"><a href="/gallery.html">go to the gallery page!</a></p>
             <hr class="hr-banner">
