--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!--    header_tag   -->
         <header>
             <nav class="navbar">
-                <div class="website-logo">T</div>
+                <div class="website-logo"><img src="./img/logo.png" width="50px"></div>
                 <a href="#" class="hamburger-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
