--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
     <body>
         <header>
             <nav class="navbar">
-                <div class="website-logo">T</div>
+                <div class="website-logo"><img src="./img/logo.png" width="50px"></div>
                 <a href="#" class="hamburger-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
