--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li><a href="#whoiam">Who I am</a></li>
                         <li><a href="#contacts">Contact</a></li>
                         <li><a href="gallery.html">Visit the gallery!</a></li>
-                        <li><a href="http://www.confessionsoft.blogspot.com" target="_blank">Go To ThE BlOg</a></li>
+                        <li><a href="http://www.confessionsoft.blogspot.com" target="_blank">Go To ThE BlOg!</a></li>
                     </ul>
                 </div>
             </nav>
