added spotify playlist to th footer

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                 <li class="social__list--item"><a href="mailto:tsaysmail.gmail.com" class="social__list__link"><i class="far fa-envelope fa-2x" style="color:white"></i></a></u1></li>
                 <li class="social__list--item"><a class="social__list__link" href="https://www.instagram.com/i_thanvanth/" target="_blank"><i class="fab fa-instagram fa-2x" style="color:white"></i></a></li>
                 <li class="social__list--item"><a class="social__list__link" href="https://twitter.com/ThanvanthVinod" target="_blank"><i class="fab fa-twitter fa-2x" style="color:white"></i></a></li>
+                <li class="social__list--item"><a href="https://open.spotify.com/playlist/6gFgAX86hfkMVTgaBseJOu?si=EoTGtcC_Tgy8-55Zc7nB4g" class="social__list__link" target="_blank"><i class="fab fa-spotify fa-2x" style="color:white"></i></a></u1></li>
                 <li class="social__list--item"><a class="social__list__link" href="https://github.com/i-thanvanth" target="_blank"><i class="fab fa-github fa-2x" style="color:white"></i></a></li>
                 <li class="social__list--item"><a href="https://confessionsoft.blogspot.com" class="social__list__link" target="_blank"><i class="fas fa-blog fa-2x" style="color:white"></i></a></u1></li>
             </ul>
