--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Knewave&family=Montserrat:ital@1&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap" rel="stylesheet">      
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap" rel="stylesheet">   
         <!--    Declaring the title of the site WHOO!!!-->
         <title>T's personal site</title>
 
@@ -41,8 +41,8 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#whoiam">Who I am</a></li>
-                        <li><a href="#contacts">Contact</a></li>
-                        <li><a href="gallery.html">Visit the gallery!</a></li>
+                        <li><a href="contacts.html" target="_blank">Contact</a></li>
+                        <li><a href="gallery.html" target="_blank">Visit the gallery!</a></li>
                         <li><a href="http://www.confessionsoft.blogspot.com" target="_blank">Go To ThE BlOg!</a></li>
                     </ul>
                 </div>
