changed some stuff around the site

--- a/about.html
+++ b/about.html
@@ -8,7 +8,32 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="app__body">
+ <header>
+            <nav class="navbar">
+                <div class="website-logo"><a href="./index.html"><img src="./img/wlogo.png" width="50px"></a></div>
+                <div class="navbar-elements" id="navbar-elements">
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="http://www.confessionsoft.blogspot.com" target="_blank">Go To The Blog!</a></li>
+                    </ul>
+                </div>
+                
+            </nav>
+            
+</header>
+<div class="body__about">
+    <div class="img"><p><img src="./img/image__about.jpeg"></p></div>
+    <div class="text">
+        <h1>About-me</h1>
+        <p>hello! I am Thanvanth, but I'd like to call myself T! T's a clumsy teen with a good sense of humor and love for physics and computers. I am sure that some of you might know that from the above banner but I just wanted to repeat it, just in case you weren't paying attention.T also has a blog named "ConfessionsofT", If you want to read it you could access it through the contacts section at the end of the page! Well, T codes during his free-time, infact he developed this site from scratch, and he loves writing and I guess his love for writing led him to start the blog, T being flexible, tries to be imaginative and strives to get the work done using his versatile skill-set at the same time tries to understand concepts and does it with passion. He's an astute person who's driven to accomplish and tries to improve the morale of people around him by being cordial and respectful to the members of his team.</p>
+        <div class="icons">
+            <a href="https://twitter.com/ThanvanthVinod" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="https://www.instagram.com/i_thanvanth/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://github.com/i-thanvanth" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+            <a href="mailto:tsaysmail.gmail.com" target="_blank"><i class="far fa-envelope fa-2x"></i></a>
+        </div>
     </div>
+</div>
+<script src="./script.js"></script>
 </body>
 </html>
