--- a/index.html
+++ b/index.html
@@ -32,15 +32,10 @@
         <header>
             <nav class="navbar">
                 <div class="website-logo"><a href="./index.html"><img src="./img/logo.png" width="50px"></a></div>
-                <a href="#" class="hamburger-menu">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
                 <div class="navbar-elements">
                     <ul>
                         <li><a href="#home">Home</a></li>
-                        <li><a href="#whoiam">Who I am</a></li>
+                        <li><a href="about.html">Who I am</a></li>
                         <li><a href="contacts.html" target="_blank">Contact</a></li>
                         <li><a href="gallery.html" target="_blank">Visit the gallery!</a></li>
                         <li><a href="http://www.confessionsoft.blogspot.com" target="_blank">Go To ThE BlOg!</a></li>
