--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         <header>
             <nav class="navbar">
                 <div class="website-logo"><a href="./index.html"><img src="./img/logo.png" width="50px"></a></div>
+                 <a href="#" class="hamburger-menu">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
                 <div class="navbar-elements">
                     <ul>
                         <li><a href="#home">Home</a></li>
