some minor changes

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
                 <div class="website-logo"><a href="./index.html"><img src="./img/wlogo.png" width="50px"></a></div>
                 <div class="navbar-elements" id="navbar-elements">
                     <ul>
-                        <li><a href="#home">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="http://www.confessionsoft.blogspot.com" target="_blank">Go To The Blog!</a></li>
                     </ul>
                 </div>
@@ -31,7 +31,9 @@
             <a href="https://www.instagram.com/i_thanvanth/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
             <a href="https://github.com/i-thanvanth" target="_blank"><i class="fab fa-github fa-2x"></i></a>
             <a href="mailto:tsaysmail.gmail.com" target="_blank"><i class="far fa-envelope fa-2x"></i></a>
+            <a href="./gallery.html" target="_blank"><i class="fas fa-arrow-circle-right fa-2x more" style="color: black;"></i></a>
         </div>
+        
     </div>
 </div>
 <script src="./script.js"></script>
