--- a/gallery.html
+++ b/gallery.html
@@ -9,18 +9,15 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="script.js" defer></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Knewave&family=Montserrat:ital@1&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap" rel="stylesheet">
         <title>T's personal site --gallery</title>
     </head>
 
     <body>
         <header>
             <nav class="navbar">
-                <div class="website-logo"><a href="./index.html"><img src="./img/logo.png" width="50px"></a></div>
+                <div class="website-logo"><a href="./index.html"><img src="./img/wlogo.png" width="50px"></a></div>
                 <a href="#" class="hamburger-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
@@ -29,7 +26,7 @@
                 <div class="navbar-elements">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#contacts">Contact T</a></li>
+                        <li><a href="contacts.html">Contact T</a></li>
                         <li><a href="http://www.confessionsoft.blogspot.com" target="_blank">Go To ThE BlOg</a></li>
                     </ul>
                 </div>
@@ -38,6 +35,7 @@
 
         <section class=gallery--intro>
             <h1>Welcome to this site's gallery section! <i class="far fa-grin-beam"></i></h1>
+            <p>T loves photography here's some of the output of his past-time activity!</p>
         </section>
 
         <section class="gallery">
@@ -61,11 +59,11 @@
 
         <footer id="contacts" class="contacts">            
             <ul style="list-style-type: none" class="social__list">
-                <li class="social__list--item"><a href="mailto:tsaysmail.gmail.com" class="social__list__link"><i class="far fa-envelope fa-2x" style="color:white"></i></a></u1></li>
-                <li class="social__list--item"><a class="social__list__link" href="https://www.instagram.com/i_thanvanth/" target="_blank"><i class="fab fa-instagram fa-2x" style="color:white"></i></a></li>
-                <li class="social__list--item"><a class="social__list__link" href="https://twitter.com/ThanvanthVinod" target="_blank"><i class="fab fa-twitter fa-2x" style="color:white"></i></a></li>
-                <li class="social__list--item"><a class="social__list__link" href="https://github.com/i-thanvanth" target="_blank"><i class="fab fa-github fa-2x" style="color:white"></i></a></li>
-                <li class="social__list--item"><a href="https://confessionsoft.blogspot.com" class="social__list__link" target="_blank"><i class="fas fa-blog fa-2x" style="color:white"></i></a></u1></li>
+                <li class="social__list--item"><a href="mailto:tsaysmail.gmail.com" class="social__list__link"><i class="far fa-envelope fa-2x" style="color:black"></i></a></u1></li>
+                <li class="social__list--item"><a class="social__list__link" href="https://www.instagram.com/i_thanvanth/" target="_blank"><i class="fab fa-instagram fa-2x" style="color:black"></i></a></li>
+                <li class="social__list--item"><a class="social__list__link" href="https://twitter.com/ThanvanthVinod" target="_blank"><i class="fab fa-twitter fa-2x" style="color:black"></i></a></li>
+                <li class="social__list--item"><a class="social__list__link" href="https://github.com/i-thanvanth" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></li>
+                <li class="social__list--item"><a href="https://confessionsoft.blogspot.com" class="social__list__link" target="_blank"><i class="fas fa-blog fa-2x" style="color:black "></i></a></u1></li>
             </ul>
             <br>
             <p class="footer-text">... Powered by T's code and Github-pages ...</p>
