--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/about.css">
     <title>Document</title>
+    <style>@import url(https://fonts.googleapis.com/css2?family=Oxygen&display=swap);@import url(https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap);*{box-sizing:border-box;margin:0;padding:0}html{scroll-behavior:smooth}body{background-color:#fff;margin:0;padding:0}.navbar{display:flex!important;justify-content:space-between;align-items:center;background-color:#fff;color:#000;font-family:Rubik,sans-serif;padding:10px;border-bottom:1px solid #000}.navbar-elements ul{margin:0;padding:0;display:flex;color:#000!important}.navbar-elements li{list-style:none;display:inline!important}.navbar-elements a{text-decoration:none;color:#000;padding:.5rem;display:block;font-size:1.2rem;border:#fff!important}.body__about{display:flex;height:100vh}.img img{width:100%;align-content:space-around}.img{margin-top:22vh;width:200rem;flex-grow:2;margin-left:2vh}.text{margin-top:15vh;font-size:x-large}.icons{display:flex;padding:10px}.icons a{padding-left:10px;font-size:medium;color:#000}.more{margin-left:40vh}.text h1{text-align:center;font-family:'Playfair Display',serif}.text p{font-family:Oxygen,sans-serif;margin-right:10px;margin-left:20px}@media (max-width:600px){.body__about{display:flex;flex-direction:column}.more{margin-left:8vh}.img img{width:100%;max-width:200px;margin-top:-10vh;margin-left:auto;height:auto;border:none}.img{width:50%;margin:auto;margin-top:15vh}.text{margin:2vh;margin-left:20px;font-size:x-large}.icons{padding:10px}.icons a{padding:10px;font-size:medium;color:#000}}@media (min-width:1100px){.more{margin-left:75vh}}@media (min-width:700px){.more{margin-left:10vh}}@media (min-width:1300px){.more{margin-left:95vh}}@media (max-width:700px){.more{margin-left:10vh}}</style>
 </head>
 <body>
  <header>
@@ -35,6 +35,6 @@
         
     </div>
 </div>
-<script src="./script.js"></script>
+<link rel="stylesheet" href="./css/about.css">
 </body>
 </html>
