--- a/contacts.html
+++ b/contacts.html
@@ -24,5 +24,7 @@
         </div>
     </div>
     <link rel="stylesheet" href="./css/contacts.css">
+    <link rel="preload" as="style" onload="this.rel='stylesheet'" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="preload" as="style" onload="this.rel='stylesheet'"/>
 </body>
 </html>
