--- a/about.html
+++ b/about.html
@@ -80,12 +80,24 @@
       }
       .text h1 {
         text-align: center;
-        font-family: "Playfair Display", serif;
+        font-family: 'Playfair Display', serif;
       }
       .text p {
         font-family: Oxygen, sans-serif;
         margin-right: 10px;
         margin-left: 20px;
+      }
+      .about__blog--link {
+        text-decoration: none;
+        color: black;
+        border-bottom: 1px solid black;
+        transition: 0.5s;
+      }
+      .about__blog--link:hover {
+        text-decoration: none;
+        color: black;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
       }
       @media (max-width: 600px) {
         .body__about {
@@ -169,17 +181,19 @@
       <div class="text">
         <h1>About-me</h1>
         <p>
-          hello! I am Thanvanth, but I'd like to call myself T! T's a clumsy
-          teen with a good sense of humor and love for physics and computers. I
-          am sure that some of you might know that from the above banner but I
+          Hello! I am Thanvanth, but I'd like to call myself T! T's a clumsy
+          teen with a good sense of humor and a love for physics and computers.
+          I am sure that some of you might know that from the above banner but,
           just wanted to repeat it, just in case you weren't paying attention.T
-          also has a blog named "ConfessionsofT", If you want to read it you
-          could access it through the contacts section at the end of the page!
-          Well, T codes during his free-time, infact he developed this site from
-          scratch, and he loves writing and I guess his love for writing led him
-          to start the blog, T being flexible, tries to be imaginative and
-          strives to get the work done using his versatile skill-set at the same
-          time tries to understand concepts and does it with passion. He's an
+          also has a blog named
+          <a href="http://confessionsoft.blogspot.com" class="about__blog--link"
+            >ConfessionsofT</a
+          >, If you need to read the blog, click the word or access it through
+          the home section. Well, T codes during his free-time, He developed
+          this site from scratch, and he loves writing, and his love for writing
+          led him to start the blog. T tries his best to be imaginative and
+          strives to get the work done using his versatile skill-set while
+          trying to understand concepts, and does it with passion. He's an
           astute person who's driven to accomplish and tries to improve the
           morale of people around him by being cordial and respectful to the
           members of his team.
