--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About T</title>
+    <link rel="shortcut icon" type="image/png" href="./img/T-favicon.png" />
     <style>
       @import url(https://fonts.googleapis.com/css2?family=Oxygen&display=swap);
       @import url(https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap);
