--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/png" href="./img/T-favicon.png" />
     <style>
       * {
         box-sizing: border-box;
