--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1" />
         <title>T's personal site --gallery</title>
+        <link rel="shortcut icon" type="image/png" href="./img/T-favicon.png">
     </head>
 
     <body>
