--- a/contacts.html
+++ b/contacts.html
@@ -9,6 +9,7 @@
         box-sizing: border-box;
         margin: 0;
         padding: 0;
+        -webkit-tap-highlight-color: transparent;
       }
       body {
         background-color: #0e131f;
