--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1" />
         <title>T's personal site --gallery</title>
-        <style>*{box-sizing:border-box;margin:0;padding:0}html{scroll-behavior:smooth;height:100%}body{background:#fff;margin:0;padding:0;display:flex;flex-flow:column;height:100%}.navbar{display:flex;justify-content:space-between;align-items:center;background-color:#fff;color:#000!important;font-family:Rubik,sans-serif;border-bottom:1px solid #000}.website-logo{margin:.5rem}.navbar-elements ul{margin:0;padding:0;display:flex}.navbar-elements li{list-style:none}.navbar-elements a{text-decoration:none;color:#000!important;padding:1rem;padding-bottom:.6rem;display:block;font-size:1.2rem}.hamburger-menu{position:absolute;top:1.5rem;right:1rem;display:none;flex-direction:column;justify-content:space-between;width:30px;height:21px}.hamburger-menu .bar{height:2px;width:100%;background-color:#000;border-radius:10px}@media (max-width:600px){.hamburger-menu{display:flex}.navbar-elements{display:none;width:100%}.navbar{flex-direction:column;align-items:flex-start}.navbar-elements ul{width:100%;flex-direction:column;border-top:1px solid #000}.navbar-elements li{text-align:center;font-size:1.2rem}.navbar-elements li a{padding:.5rem 1rem}}section div{padding:1px}body::-webkit-scrollbar{background-color:#cce6f4;width:16px}body::-webkit-scrollbar-track{background-color:#cce6f4}body::-webkit-scrollbar-thumb{background-color:#a0a5a6;border-radius:16px;border:4px solid #cce6f4}ul{display:inline}ul li{list-style:none;display:inline}body{background-image:url(../img/banner-reducedopacity.jpg);background-repeat:no-repeat;background-position:center center;background-attachment:fixed;background-size:cover;background-position:top;width:100%;margin:0 auto;padding:0}.gallery{display:grid;grid-template-columns:repeat(auto,minmax(300px,1fr))}.gallery img{width:100%;box-shadow:0 4px 8px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);padding:20px}.gallery--intro{font-family:Montserrat,sans-serif;text-align:center;padding:15px}.gallery--intro p{font-family:Montserrat,sans-serif;text-align:center;font-size:20px;padding:15px}</style>
+        <style>*{box-sizing:border-box;margin:0;padding:0}html{scroll-behavior:smooth;height:100%}body{background:#fff;margin:0;padding:0;display:flex;flex-flow:column;height:100%}.navbar{display:flex;justify-content:space-between;align-items:center;background-color:#fff;color:#000!important;font-family:Rubik,sans-serif;border-bottom:1px solid #000}.website-logo{margin:.5rem}.navbar-elements ul{margin:0;padding:0;display:flex}.navbar-elements li{list-style:none}.navbar-elements a{text-decoration:none;color:#000!important;padding:1rem;padding-bottom:.6rem;display:block;font-size:1.2rem}.hamburger-menu{position:absolute;top:1.5rem;right:1rem;display:none;flex-direction:column;justify-content:space-between;width:30px;height:21px}.hamburger-menu .bar{height:2px;width:100%;background-color:#000;border-radius:10px}@media (max-width:600px){.hamburger-menu{display:flex}.navbar-elements{display:none;width:100%}.navbar{flex-direction:column;align-items:flex-start}.navbar-elements ul{width:100%;flex-direction:column;border-top:1px solid #000}.navbar-elements li{text-align:center;font-size:1.2rem}.navbar-elements li a{padding:.5rem 1rem}}section div{padding:1px}body::-webkit-scrollbar{background-color:#cce6f4;width:16px}body::-webkit-scrollbar-track{background-color:#cce6f4}body::-webkit-scrollbar-thumb{background-color:#a0a5a6;border-radius:16px;border:4px solid #cce6f4}ul{display:inline}ul li{list-style:none;display:inline}body{background-image:url(../img/banner-reducedopacity.jpg);background-repeat:no-repeat;background-position:center center;background-attachment:fixed;background-size:cover;background-position:top;width:100%;margin:0 auto;padding:0}.gallery{display:grid;grid-template-columns:repeat(auto,minmax(300px,1fr))}.gallery img{width:100%;box-shadow:0 4px 8px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);padding:20px}.gallery--intro{font-family:'Montserrat',sans-serif;text-align:center;padding:15px}.gallery--intro p{font-family:Montserrat,sans-serif;text-align:center;font-size:20px;padding:15px}</style>
         <link rel="shortcut icon" type="image/png" href="./img/T-favicon.png">
     </head>
 
@@ -34,15 +34,144 @@
 
         <section class="gallery">
             <div>
-                <img src="img/1.jpg">
-                <img src="img/2.jpg">
-                <img src="img/3.jpg">
-                <img src="img/4.jpg">
-                <img src="img/5.jpg">
-                <img src="img/8.jpg">
-                <img src="img/9.jpg">
-                <img src="img/6.jpg">
-                <img src="img/10.jpg">
+                <picture>
+<img
+sizes="(max-width: 1400px) 100vw, 1400px"
+srcset="
+1_b4vqay_c_scale,w_200.jpg 200w,
+1_b4vqay_c_scale,w_515.jpg 515w,
+1_b4vqay_c_scale,w_737.jpg 737w,
+1_b4vqay_c_scale,w_920.jpg 920w,
+1_b4vqay_c_scale,w_1092.jpg 1092w,
+1_b4vqay_c_scale,w_1243.jpg 1243w,
+1_b4vqay_c_scale,w_1396.jpg 1396w,
+1_b4vqay_c_scale,w_1400.jpg 1400w"
+src="./img/1_b4vqay_c_scale,w_1400.jpg"
+alt="">
+</picture>
+<picture>
+<img
+sizes="(max-width: 1400px) 100vw, 1400px"
+srcset="
+2_vmi2vb_c_scale,w_200.jpg 200w,
+2_vmi2vb_c_scale,w_458.jpg 458w,
+2_vmi2vb_c_scale,w_650.jpg 650w,
+2_vmi2vb_c_scale,w_811.jpg 811w,
+2_vmi2vb_c_scale,w_950.jpg 950w,
+2_vmi2vb_c_scale,w_1076.jpg 1076w,
+2_vmi2vb_c_scale,w_1211.jpg 1211w,
+2_vmi2vb_c_scale,w_1324.jpg 1324w,
+2_vmi2vb_c_scale,w_1400.jpg 1400w"
+src="./img/2_vmi2vb_c_scale,w_1400.jpg"
+alt="">
+</picture>
+                <picture>
+<img
+sizes="(max-width: 1400px) 100vw, 1400px"
+srcset="
+3_fx9upb_c_scale,w_200.jpg 200w,
+3_fx9upb_c_scale,w_475.jpg 475w,
+3_fx9upb_c_scale,w_669.jpg 669w,
+3_fx9upb_c_scale,w_829.jpg 829w,
+3_fx9upb_c_scale,w_996.jpg 996w,
+3_fx9upb_c_scale,w_1140.jpg 1140w,
+3_fx9upb_c_scale,w_1268.jpg 1268w,
+3_fx9upb_c_scale,w_1395.jpg 1395w,
+3_fx9upb_c_scale,w_1400.jpg 1400w"
+src="./img/3_fx9upb_c_scale,w_1400.jpg"
+alt="">
+</picture>
+                              <picture>
+<img
+sizes="(max-width: 1400px) 100vw, 1400px"
+srcset="
+4_xtnavq_c_scale,w_200.jpg200w,
+4_xtnavq_c_scale,w_649.jpg 649w,
+4_xtnavq_c_scale,w_950.jpg 950w,
+4_xtnavq_c_scale,w_1176.jpg 1176w,
+4_xtnavq_c_scale,w_1377.jpg 1377w'
+4_xtnavq_c_scale,w_1400.jpg 1400w"
+src="./img/4_xtnavq_c_scale,w_1400.jpg"
+alt="">
+</picture>  
+                <picture>
+<img
+sizes="(max-width: 1400px) 100vw, 1400px"
+srcset="
+5_lbdfpm_c_scale,w_200.jpg 200w,
+5_lbdfpm_c_scale,w_581.jpg 581w,
+5_lbdfpm_c_scale,w_827.jpg 827w,
+5_lbdfpm_c_scale,w_1046.jpg 1046w,
+5_lbdfpm_c_scale,w_1246.jpg 1246w,
+5_lbdfpm_c_scale,w_1400.jpg 1400w"
+src="./img/5_lbdfpm_c_scale,w_1400.jpg"
+alt="">
+</picture>
+                <picture>
+<img
+sizes="(max-width: 1400px) 100vw, 1400px"
+srcset="
+8_tkoptx_c_scale,w_200.jpg 200w,
+8_tkoptx_c_scale,w_407.jpg 407w,
+8_tkoptx_c_scale,w_550.jpg 550w,
+8_tkoptx_c_scale,w_669.jpg 669w,
+8_tkoptx_c_scale,w_780.jpg 780w,
+8_tkoptx_c_scale,w_878.jpg 878w,
+8_tkoptx_c_scale,w_970.jpg 970w,
+8_tkoptx_c_scale,w_1042.jpg 1042w,
+8_tkoptx_c_scale,w_1123.jpg 1123w,
+8_tkoptx_c_scale,w_1199.jpg 1199w,
+8_tkoptx_c_scale,w_1277.jpg 1277w,
+8_tkoptx_c_scale,w_1348.jpg 1348w,
+8_tkoptx_c_scale,w_1393.jpg 1393w,
+8_tkoptx_c_scale,w_1399.jpg 1399w,
+8_tkoptx_c_scale,w_1400.jpg 1400w"
+src="./img/8_tkoptx_c_scale,w_1400.jpg"
+alt="">
+</picture>
+                <picture>
+<img
+sizes="(max-width: 1400px) 100vw, 1400px"
+srcset="
+9_nhblaz_c_scale,w_200.jpg 200w,
+9_nhblaz_c_scale,w_518.jpg 518w,
+9_nhblaz_c_scale,w_744.jpg 744w,
+9_nhblaz_c_scale,w_923.jpg 923w,
+9_nhblaz_c_scale,w_1061.jpg 1061w,
+9_nhblaz_c_scale,w_1204.jpg 1204w,
+9_nhblaz_c_scale,w_1341.jpg 1341w,
+9_nhblaz_c_scale,w_1399.jpg 1399w,
+9_nhblaz_c_scale,w_1400.jpg 1400w"
+src="./img/9_nhblaz_c_scale,w_1400.jpg"
+alt="">
+</picture>
+                <picture>
+<img
+sizes="(max-width: 1400px) 100vw, 1400px"
+srcset="
+6_kncb4r_c_scale,w_200.jpg 200w,
+6_kncb4r_c_scale,w_514.jpg 514w,
+6_kncb4r_c_scale,w_723.jpg 723w,
+6_kncb4r_c_scale,w_916.jpg 916w,
+6_kncb4r_c_scale,w_1074.jpg 1074w,
+6_kncb4r_c_scale,w_1216.jpg 1216w,
+6_kncb4r_c_scale,w_1337.jpg 1337w,
+6_kncb4r_c_scale,w_1400.jpg 1400w"
+src="./img/6_kncb4r_c_scale,w_1400.jpg"
+alt="">
+</picture>
+            <picture>
+<img
+sizes="(max-width: 1400px) 100vw, 1400px"
+srcset="
+10_qdfm0q_c_scale,w_200.jpg 200w,
+10_qdfm0q_c_scale,w_690.jpg 690w,
+10_qdfm0q_c_scale,w_1008.jpg 1008w,
+10_qdfm0q_c_scale,w_1291.jpg 1291w,
+10_qdfm0q_c_scale,w_1400.jpg 1400w"
+src="./img/10_qdfm0q_c_scale,w_1400.jpg"
+alt="">
+</picture>
             </div>
         </section>
 
