--- a/gallery.html
+++ b/gallery.html
@@ -38,14 +38,14 @@
 <img
 sizes="(max-width: 1400px) 100vw, 1400px"
 srcset="
-1_b4vqay_c_scale,w_200.jpg 200w,
-1_b4vqay_c_scale,w_515.jpg 515w,
-1_b4vqay_c_scale,w_737.jpg 737w,
-1_b4vqay_c_scale,w_920.jpg 920w,
-1_b4vqay_c_scale,w_1092.jpg 1092w,
-1_b4vqay_c_scale,w_1243.jpg 1243w,
-1_b4vqay_c_scale,w_1396.jpg 1396w,
-1_b4vqay_c_scale,w_1400.jpg 1400w"
+./img/1_b4vqay_c_scale,w_200.jpg 200w,
+./img/1_b4vqay_c_scale,w_515.jpg 515w,
+./img/1_b4vqay_c_scale,w_737.jpg 737w,
+./img/1_b4vqay_c_scale,w_920.jpg 920w,
+./img/1_b4vqay_c_scale,w_1092.jpg 1092w,
+./img/1_b4vqay_c_scale,w_1243.jpg 1243w,
+./img/1_b4vqay_c_scale,w_1396.jpg 1396w,
+./img/1_b4vqay_c_scale,w_1400.jpg 1400w"
 src="./img/1_b4vqay_c_scale,w_1400.jpg"
 alt="">
 </picture>
@@ -53,15 +53,15 @@ alt="">
 <img
 sizes="(max-width: 1400px) 100vw, 1400px"
 srcset="
-2_vmi2vb_c_scale,w_200.jpg 200w,
-2_vmi2vb_c_scale,w_458.jpg 458w,
-2_vmi2vb_c_scale,w_650.jpg 650w,
-2_vmi2vb_c_scale,w_811.jpg 811w,
-2_vmi2vb_c_scale,w_950.jpg 950w,
-2_vmi2vb_c_scale,w_1076.jpg 1076w,
-2_vmi2vb_c_scale,w_1211.jpg 1211w,
-2_vmi2vb_c_scale,w_1324.jpg 1324w,
-2_vmi2vb_c_scale,w_1400.jpg 1400w"
+./img/2_vmi2vb_c_scale,w_200.jpg 200w,
+./img/2_vmi2vb_c_scale,w_458.jpg 458w,
+./img/2_vmi2vb_c_scale,w_650.jpg 650w,
+./img/2_vmi2vb_c_scale,w_811.jpg 811w,
+./img/2_vmi2vb_c_scale,w_950.jpg 950w,
+./img/2_vmi2vb_c_scale,w_1076.jpg 1076w,
+./img/2_vmi2vb_c_scale,w_1211.jpg 1211w,
+./img/2_vmi2vb_c_scale,w_1324.jpg 1324w,
+./img/2_vmi2vb_c_scale,w_1400.jpg 1400w"
 src="./img/2_vmi2vb_c_scale,w_1400.jpg"
 alt="">
 </picture>
@@ -69,15 +69,15 @@ alt="">
 <img
 sizes="(max-width: 1400px) 100vw, 1400px"
 srcset="
-3_fx9upb_c_scale,w_200.jpg 200w,
-3_fx9upb_c_scale,w_475.jpg 475w,
-3_fx9upb_c_scale,w_669.jpg 669w,
-3_fx9upb_c_scale,w_829.jpg 829w,
-3_fx9upb_c_scale,w_996.jpg 996w,
-3_fx9upb_c_scale,w_1140.jpg 1140w,
-3_fx9upb_c_scale,w_1268.jpg 1268w,
-3_fx9upb_c_scale,w_1395.jpg 1395w,
-3_fx9upb_c_scale,w_1400.jpg 1400w"
+./img/3_fx9upb_c_scale,w_200.jpg 200w,
+./img/3_fx9upb_c_scale,w_475.jpg 475w,
+./img/3_fx9upb_c_scale,w_669.jpg 669w,
+./img/3_fx9upb_c_scale,w_829.jpg 829w,
+./img/3_fx9upb_c_scale,w_996.jpg 996w,
+./img/3_fx9upb_c_scale,w_1140.jpg 1140w,
+./img/3_fx9upb_c_scale,w_1268.jpg 1268w,
+./img/3_fx9upb_c_scale,w_1395.jpg 1395w,
+./img/3_fx9upb_c_scale,w_1400.jpg 1400w"
 src="./img/3_fx9upb_c_scale,w_1400.jpg"
 alt="">
 </picture>
@@ -85,12 +85,12 @@ alt="">
 <img
 sizes="(max-width: 1400px) 100vw, 1400px"
 srcset="
-4_xtnavq_c_scale,w_200.jpg200w,
-4_xtnavq_c_scale,w_649.jpg 649w,
-4_xtnavq_c_scale,w_950.jpg 950w,
-4_xtnavq_c_scale,w_1176.jpg 1176w,
-4_xtnavq_c_scale,w_1377.jpg 1377w'
-4_xtnavq_c_scale,w_1400.jpg 1400w"
+./img/4_xtnavq_c_scale,w_200.jpg200w,
+./img/4_xtnavq_c_scale,w_649.jpg 649w,
+./img/4_xtnavq_c_scale,w_950.jpg 950w,
+./img/4_xtnavq_c_scale,w_1176.jpg 1176w,
+./img/4_xtnavq_c_scale,w_1377.jpg 1377w'
+./img/4_xtnavq_c_scale,w_1400.jpg 1400w"
 src="./img/4_xtnavq_c_scale,w_1400.jpg"
 alt="">
 </picture>  
@@ -98,12 +98,12 @@ alt="">
 <img
 sizes="(max-width: 1400px) 100vw, 1400px"
 srcset="
-5_lbdfpm_c_scale,w_200.jpg 200w,
-5_lbdfpm_c_scale,w_581.jpg 581w,
-5_lbdfpm_c_scale,w_827.jpg 827w,
-5_lbdfpm_c_scale,w_1046.jpg 1046w,
-5_lbdfpm_c_scale,w_1246.jpg 1246w,
-5_lbdfpm_c_scale,w_1400.jpg 1400w"
+./img/5_lbdfpm_c_scale,w_200.jpg 200w,
+./img/5_lbdfpm_c_scale,w_581.jpg 581w,
+./img/5_lbdfpm_c_scale,w_827.jpg 827w,
+./img/5_lbdfpm_c_scale,w_1046.jpg 1046w,
+./img/5_lbdfpm_c_scale,w_1246.jpg 1246w,
+./img/5_lbdfpm_c_scale,w_1400.jpg 1400w"
 src="./img/5_lbdfpm_c_scale,w_1400.jpg"
 alt="">
 </picture>
@@ -111,21 +111,21 @@ alt="">
 <img
 sizes="(max-width: 1400px) 100vw, 1400px"
 srcset="
-8_tkoptx_c_scale,w_200.jpg 200w,
-8_tkoptx_c_scale,w_407.jpg 407w,
-8_tkoptx_c_scale,w_550.jpg 550w,
-8_tkoptx_c_scale,w_669.jpg 669w,
-8_tkoptx_c_scale,w_780.jpg 780w,
-8_tkoptx_c_scale,w_878.jpg 878w,
-8_tkoptx_c_scale,w_970.jpg 970w,
-8_tkoptx_c_scale,w_1042.jpg 1042w,
-8_tkoptx_c_scale,w_1123.jpg 1123w,
-8_tkoptx_c_scale,w_1199.jpg 1199w,
-8_tkoptx_c_scale,w_1277.jpg 1277w,
-8_tkoptx_c_scale,w_1348.jpg 1348w,
-8_tkoptx_c_scale,w_1393.jpg 1393w,
-8_tkoptx_c_scale,w_1399.jpg 1399w,
-8_tkoptx_c_scale,w_1400.jpg 1400w"
+./img/8_tkoptx_c_scale,w_200.jpg 200w,
+./img/8_tkoptx_c_scale,w_407.jpg 407w,
+./img/8_tkoptx_c_scale,w_550.jpg 550w,
+./img/8_tkoptx_c_scale,w_669.jpg 669w,
+./img/8_tkoptx_c_scale,w_780.jpg 780w,
+./img/8_tkoptx_c_scale,w_878.jpg 878w,
+./img/8_tkoptx_c_scale,w_970.jpg 970w,
+./img/8_tkoptx_c_scale,w_1042.jpg 1042w,
+./img/8_tkoptx_c_scale,w_1123.jpg 1123w,
+./img/8_tkoptx_c_scale,w_1199.jpg 1199w,
+./img/8_tkoptx_c_scale,w_1277.jpg 1277w,
+./img/8_tkoptx_c_scale,w_1348.jpg 1348w,
+./img/8_tkoptx_c_scale,w_1393.jpg 1393w,
+./img/8_tkoptx_c_scale,w_1399.jpg 1399w,
+./img/8_tkoptx_c_scale,w_1400.jpg 1400w"
 src="./img/8_tkoptx_c_scale,w_1400.jpg"
 alt="">
 </picture>
@@ -133,15 +133,15 @@ alt="">
 <img
 sizes="(max-width: 1400px) 100vw, 1400px"
 srcset="
-9_nhblaz_c_scale,w_200.jpg 200w,
-9_nhblaz_c_scale,w_518.jpg 518w,
-9_nhblaz_c_scale,w_744.jpg 744w,
-9_nhblaz_c_scale,w_923.jpg 923w,
-9_nhblaz_c_scale,w_1061.jpg 1061w,
-9_nhblaz_c_scale,w_1204.jpg 1204w,
-9_nhblaz_c_scale,w_1341.jpg 1341w,
-9_nhblaz_c_scale,w_1399.jpg 1399w,
-9_nhblaz_c_scale,w_1400.jpg 1400w"
+./img/9_nhblaz_c_scale,w_200.jpg 200w,
+./img/9_nhblaz_c_scale,w_518.jpg 518w,
+./img/9_nhblaz_c_scale,w_744.jpg 744w,
+./img/9_nhblaz_c_scale,w_923.jpg 923w,
+./img/9_nhblaz_c_scale,w_1061.jpg 1061w,
+./img/9_nhblaz_c_scale,w_1204.jpg 1204w,
+./img/9_nhblaz_c_scale,w_1341.jpg 1341w,
+./img/9_nhblaz_c_scale,w_1399.jpg 1399w,
+./img/9_nhblaz_c_scale,w_1400.jpg 1400w"
 src="./img/9_nhblaz_c_scale,w_1400.jpg"
 alt="">
 </picture>
@@ -149,14 +149,14 @@ alt="">
 <img
 sizes="(max-width: 1400px) 100vw, 1400px"
 srcset="
-6_kncb4r_c_scale,w_200.jpg 200w,
-6_kncb4r_c_scale,w_514.jpg 514w,
-6_kncb4r_c_scale,w_723.jpg 723w,
-6_kncb4r_c_scale,w_916.jpg 916w,
-6_kncb4r_c_scale,w_1074.jpg 1074w,
-6_kncb4r_c_scale,w_1216.jpg 1216w,
-6_kncb4r_c_scale,w_1337.jpg 1337w,
-6_kncb4r_c_scale,w_1400.jpg 1400w"
+./img/6_kncb4r_c_scale,w_200.jpg 200w,
+./img/6_kncb4r_c_scale,w_514.jpg 514w,
+./img/6_kncb4r_c_scale,w_723.jpg 723w,
+./img/6_kncb4r_c_scale,w_916.jpg 916w,
+./img/6_kncb4r_c_scale,w_1074.jpg 1074w,
+./img/6_kncb4r_c_scale,w_1216.jpg 1216w,
+./img/6_kncb4r_c_scale,w_1337.jpg 1337w,
+./img/6_kncb4r_c_scale,w_1400.jpg 1400w"
 src="./img/6_kncb4r_c_scale,w_1400.jpg"
 alt="">
 </picture>
@@ -164,11 +164,11 @@ alt="">
 <img
 sizes="(max-width: 1400px) 100vw, 1400px"
 srcset="
-10_qdfm0q_c_scale,w_200.jpg 200w,
-10_qdfm0q_c_scale,w_690.jpg 690w,
-10_qdfm0q_c_scale,w_1008.jpg 1008w,
-10_qdfm0q_c_scale,w_1291.jpg 1291w,
-10_qdfm0q_c_scale,w_1400.jpg 1400w"
+./img/10_qdfm0q_c_scale,w_200.jpg 200w,
+./img/10_qdfm0q_c_scale,w_690.jpg 690w,
+./img/10_qdfm0q_c_scale,w_1008.jpg 1008w,
+./img/10_qdfm0q_c_scale,w_1291.jpg 1291w,
+./img/10_qdfm0q_c_scale,w_1400.jpg 1400w"
 src="./img/10_qdfm0q_c_scale,w_1400.jpg"
 alt="">
 </picture>
