Made some changes

--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
     </header>
     <div class="body__about">
       <div class="img">
-        <p><img src="./img/image__about.jpeg" /></p>
+        <p><img src="./img/img_about.jpeg" /></p>
       </div>
       <div class="text">
         <h1>About-me</h1>
