--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
         </header>
 
         <section class=gallery--intro>
-            <h1>Welcome to this site's gallery section! <i class="far fa-grin-beam"></i></h1>
+            <h1>Welcome to this site's gallery section!</h1>
             <p>T loves photography here's some of the output of his past-time activity!</p>
         </section>
 
@@ -197,6 +197,7 @@ alt="">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="stylesheet" href="css/style.css">
         <script src="script.js" defer></script>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
         <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="preload" as="style" onload="this.rel='stylesheet'"/>
         <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="preload" as="style" onload="this.rel='stylesheet'"/>  
