--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <ul style="list-style-type: none" class="social__list">
                 <li class="social__list--item"><a href="mailto:tsaysmail.gmail.com" class="social__list__link"><i class="far fa-envelope fa-2x" style="color:black"></i></a></u1></li>
                 <li class="social__list--item"><a class="social__list__link" href="https://www.instagram.com/i_thanvanth/" target="_blank"><i class="fab fa-instagram fa-2x" style="color:black"></i></a></li>
-                <li class="social__list--item"><a class="social__list__link" href="https://twitter.com/ThanvanthVinod" target="_blank"><i class="fab fa-twitter fa-2x" style="color:black"></i></a></li>
+                <li class="social__list--item"><a class="social__list__link" href="https://twitter.com/i_thanvanth" target="_blank"><i class="fab fa-twitter fa-2x" style="color:black"></i></a></li>
                 <li class="social__list--item"><a href="https://open.spotify.com/playlist/6gFgAX86hfkMVTgaBseJOu?si=EoTGtcC_Tgy8-55Zc7nB4g" class="social__list__link" target="_blank"><i class="fab fa-spotify fa-2x" style="color:black"></i></a></u1></li>
                 <li class="social__list--item"><a class="social__list__link" href="https://github.com/i-thanvanth" target="_blank"><i class="fab fa-github fa-2x" style="color:black"></i></a></li>
                 <li class="social__list--item"><a href="https://confessionsoft.blogspot.com" class="social__list__link" target="_blank"><i class="fas fa-blog fa-2x" style="color:black"></i></a></u1></li>
@@ -71,11 +71,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="stylesheet" href="css/style.css">
         <script src="script.js" defer></script>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
-        <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="preload" as="style" onload="this.rel='stylesheet'"/>
+        <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Waiting+for+the+Sunrise&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="preload" as="style" onload="this.rel='stylesheet'"/>  
         <link rel="preload" as="style" onload="this.rel='stylesheet'" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-        <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="preload" as="style" onload="this.rel='stylesheet'"/>
     </body>
 
 </html>
